--- a/pcgrr/vignettes/CHANGELOG.Rmd
+++ b/pcgrr/vignettes/CHANGELOG.Rmd
@@ -67,6 +67,7 @@ for oncogenicity classification
 - Added oncogenicity documentation in variant tables of HTML report (indicates which criteria that was matched for a given variant)
 - Removed `VEP_ALL_CSQ` from variant tables in HTML report to reduce file size - still available in TSV output
 - Added MutSpliceDB splice site effects (used e.g. for loss-of-function annotation)
+- Added MaxEntScan plugin in VEP for splice site disruption prediction (used e.g. for loss-of-function annotation)
 - Added more prediction algorithms from dbNSFP
 - Fixed bug that caused crash for missing values in DP/AF values of input VCF
 - Fixed erroneous re-formatting of MAF integer columns to floats
