--- a/pcgrr/vignettes/faq.Rmd
+++ b/pcgrr/vignettes/faq.Rmd
@@ -39,4 +39,4 @@ _Answer: This is currently not supported as input for PCGR, but is something we 
 
 __9. Is it possible for the users to update the data bundle to get the most recent versions of all underlying data sources?__
 
-_Answer: As of now, the data bundle is updated only with each release of PCGR. The data harmonization pipeline of knowledge databases in PCGR contain numerous and complex procedures, with several cleaning, quality control, and re-formatting steps, and is semi-automated in its present form. The version of all databases and key software elements are outlined in each PCGR report._
+_Answer: As of now, the data bundle is updated only with each release of PCGR. The data harmonization pipeline of knowledge databases in PCGR contain numerous and complex procedures, with several cleaning, quality control, and re-formatting steps, and is semi-automated in its present form. The versions of all databases and key software elements are outlined in each PCGR report._
