--- a/pcgrr/vignettes/CHANGELOG.Rmd
+++ b/pcgrr/vignettes/CHANGELOG.Rmd
@@ -46,6 +46,10 @@ sigven <- user("sigven")
 pdiakumis <- user("pdiakumis")
 ```
 
+## v2.2.1
+
+- Date: **2025-03-23**
+  - fix bug in CPSR for ClinVar variants with non-standard significance levels
 
 ## v2.2.0
 
@@ -72,12 +76,6 @@ for oncogenicity classification
 - Fixed bug that caused crash for missing values in DP/AF values of input VCF
 - Fixed erroneous re-formatting of MAF integer columns to floats
 - Fixed cases for which similar Entrez gene identifiers mapped to different gene names
-
-## v2.1.3
-
-- Date: **2024-02-XX**
-
-- Implemented Grantham distance for amino acid alterations
 
 ## v2.1.2
 
