--- a/pcgrr/inst/templates/pcgr_quarto_report/cna.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/cna.qmd
@@ -75,8 +75,9 @@ dt_content_tier1 <-
 tier1_gene_dt_cna <- DT::datatable(
   dt_content_tier1[['by_gene']],
   escape = F, 
-  options = list(dom = 't'),
-  extensions = c("Responsive")) |>
+  options = list(dom = 'Bfrtip',
+                 buttons = c('csv','excel')),
+  extensions = c("Responsive","Buttons")) |>
   DT::formatStyle(
     'SYMBOL',
     color = "white",
@@ -219,8 +220,9 @@ dt_content_tier2 <-
 tier2_gene_dt_cna <- DT::datatable(
   dt_content_tier2[['by_gene']],
   escape = F, 
-  options = list(dom = 't'),
-  extensions = c("Responsive")) |>
+  options = list(dom = 'Bfrtip',
+                 buttons = c('csv','excel')),
+  extensions = c("Responsive","Buttons")) |>
   DT::formatStyle(
     'SYMBOL',
     color = "white",
