--- a/pcgrr/vignettes/installation.Rmd
+++ b/pcgrr/vignettes/installation.Rmd
@@ -80,10 +80,6 @@ mv data/ ${BUNDLE_VERSION}
 [FTP site][ensembl-ftp] (search there for files starting with `homo_sapiens_vep_`).
 The latest Ensembl VEP version we support is **v`r VEP_VERSION`**.
 
-**Tip**: PCGR needs to be pointed to the _parent_ directory containing
-the downloaded `homo_sapiens/xyz_GRCh3x/` cache, which is usually called `.vep` if
-you've followed the VEP cache [download instructions][vep-cache].
-
 [vep-web]: https://www.ensembl.org/info/docs/tools/vep/index.html
 [ensembl-ftp]: https://ftp.ensembl.org/pub/release-113/variation/indexed_vep_cache/
 [vep-cache]: https://www.ensembl.org/info/docs/tools/vep/script/vep_cache.html#cache
@@ -101,6 +97,11 @@ CACHE="homo_sapiens_vep_${VEP_VERSION}_${GENOME}.tar.gz"
 wget https://ftp.ensembl.org/pub/release-${VEP_VERSION}/variation/indexed_vep_cache/${CACHE}
 gzip -dc ${CACHE} | tar xvf -
 ```
+
+**Important**: PCGR needs to be pointed to the _parent_ directory containing
+the downloaded ``r glue::glue("homo_sapiens/{VEP_VERSION}_GRCh3x/")`` cache. 
+Historically, this parent directory has been named `.vep`, but the name of this 
+directory can be arbitrarily set.
 
 ### 3. Sample Inputs
 
@@ -191,8 +192,8 @@ glue("docker pull sigven/pcgr:{PCGR_VERSION}")
 In the example below, we assume that you have the following directory structure:
 
 - `/Users/you/dir1` - the directory you are working in
-- `/Users/you/dir1/VEP_cache` - the directory where you have downloaded the VEP cache (*Note*: this should contain the `homo_sapiens` directory as its child directory)
-- `r paste0("/Users/you/dir1/", BUNDLE_VERSION)` - the directory where you have downloaded the PCGR reference bundle (*Note*: this should contain a directory named `data` as its child directory)
+- `/Users/you/dir1/VEP_cache` - the directory where you have downloaded the [VEP cache](#vep-cache) (**Note**: this directory should contain the `homo_sapiens` directory as its child directory
+- ``r glue::glue("/Users/you/dir1/{BUNDLE_VERSION}")`` - the directory where you have downloaded the PCGR reference bundle (**Note**: this directory should contain a directory named `data` as its child directory)
 - `/Users/you/dir1/pcgr_inputs` - the directory where you have your input files (e.g. VCF files)
 - `/Users/you/dir1/pcgr_outputs` - the directory where you want to store the PCGR outputs
 
